--- a/Einzelbeispiel_Palindorm/app/src/main/res/values/strings.xml
+++ b/Einzelbeispiel_Palindorm/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Einzelbeispiel_Palindorm</string>
+    <string name="header">Palindrom?</string>
+    <string name="inputLabel">Eingabe String:</string>
+    <string name="inputBox">String >= 5 Zeichen</string>
+    <string name="buttonCheck">Check String</string>
 </resources>
